Changed search box styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <h1 class="search__title">Search countries:</h1>
+    <h1 class="search-title">Search countries:</h1>
     <input
-      class="search__box"
+      class="search-box"
       type="text"
       placeholder="Start typing..."
       type="text"
