--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <h1 class="search-title">Search countries:</h1>
-    <input
-      type="text"
-      placeholder="Start typing..."
-      type="text"
-      id="search-box"
-    />
+    <input type="text" placeholder="Start typing..." id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
